dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # TODO true
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: kubernetes.whiskeysierra.myhome-server.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
  tls:
    - hosts:
        - kubernetes.whiskeysierra.myhome-server.de
      secretName: kubernetes-whiskeysierra-myhome-server-tls
